# r6statsapi

./: .gitignore  .readthedocs.yml  LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: blackcheck.yml  pypirelease.yml  pythonpackage.yml  pythonpublish.yml
docs/: api.rst  conf.py  index.rst  intro.rst
r6statsapi/: VERSION  __init__.py  client.py  enums.py  errors.py  player.py
