[metadata]
name = r6statsapi
version = attr: r6statsapi.__version__
description = Async Wrapper for R6 Stats API
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
author = flare
url = https://github.com/flaree/r6statsapi
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
packages = find_namespace:
python_requires = >=3.7
install_requires =
    aiohttp>=3.5.4,<3.6.0
    typing_extensions==3.7.4; python_version == "3.7"

[options.extras_require]
docs =
    sphinx>=2.1.2,<2.2.0
    sphinxcontrib-trio==1.1.0
    sphinx_rtd_theme>=0.4.3,<0.5.0
style =
    black==19.3b0

[options.packages.find]
include =
    r6statsapi
    r6statsapi.*